--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weapp-copyright",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "🌞 微信小程序版权声明自定义组件",
   "main": "index.js",
   "scripts": {
     "dev": "gulp"
