--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "gulp-sourcemaps": "^3.0.0",
     "pump": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "keywords": [
+    "微信小程序",
+    "weapp",
+    "components",
+    "copyright"
+  ]
 }
